# rei-rt-audio

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/: CODEOWNERS
docs/source/: conf.py  index.rst
examples/: main.py  pass_through.py
src/rei_rt_audio/: __init__.py  calculate.py  callback.py  consumer.py  controller.py  dispatcher.py  logger.py  plotter.py  processor.py  publisher.py  strategy.py  subscriber.py
tests/calculate/: test_calculate_mean.py  test_calculate_peak_dbfs.py  test_calculate_rms.py  test_calculate_rms_dbfs.py  test_gain_db_to_linear.py  test_is_silent.py  test_linear_to_gain_db.py
tests/callback/: test_InOutStreamCallbackHandler.py  test_Passthrough.py
tests/dispatcher/: test_InOutStreamDispatcher.py
